# RationalAttackerGuessingCurves

./: CMakeLists.txt  Makefile  README.md  distribution.cpp  distribution.hpp  example  helpers.cpp  helpers.hpp  interactive  interactive.cpp  iterativeB.txt  iterativeB800.txt  lp-bounds.txt  main.cpp  optimal-bounds copy.txt  optimal-bounds.txt  plot.py  pwdio.cpp  pwdio.hpp  statistics  stored.txt  test.py  threshold  threshold500  threshold800
dataset_stats/: stats.cpp
examples/: example.cpp  readme.md
final/: valuecost500.txt
finalAlt/: valuecost1500.txt  valuecost2000.txt  valuecost250.txt  valuecost5000.txt  valuecost50000.txt  valuecost750.txt
include/: bounds.hpp  distribution.hpp  helpers.hpp  lp_bounds.hpp  plotting.hpp  pwdio.hpp  wrappers.hpp
nstar=2/: valuecost1000.000000.txt  valuecost500.000000.txt
nstar=5/: valuecost1500.000000.txt  valuecost750.000000.txt
old/final/: valuecost100.txt  valuecost1000.txt  valuecost1500.txt  valuecost250.txt  valuecost750.txt
old/finalAlt/: valuecost100.txt  valuecost1000.txt  valuecost10000.txt  valuecost500.txt  valuecost5000.txt  valuecost50000.txt
old/nstar=2/: valuecost100.000000.txt  valuecost11000.000000.txt  valuecost250.000000.txt  valuecost750.000000.txt
old/nstar=5/: valuecost100.000000.txt  valuecost1000.000000.txt  valuecost2000.000000.txt  valuecost250.000000.txt  valuecost500.000000.txt
pwd_cracked/: large10000.txt  large5000.txt  large50000.txt  small100.txt  small1000.txt  small1500.txt  small250.txt  small500.txt  small5000.txt  small750.txt
src/: bounds.cpp  distribution.cpp  error_check.cpp  helpers.cpp  lp_bounds.cpp  plotting.cpp  pwdio.cpp  wrappers.cpp
thresholds/: threshold.cpp  threshold500.cpp  threshold800.cpp
